# aion-ai-research

./: .gitignore  GITHUB_PAGES_DEPLOYMENT.md  README.md
.github/workflows/: deploy-frontend.yml
backend/: .env.example  ENHANCEMENT_SUMMARY.md  GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  pyproject.toml  test_db.py
backend/docs/: ENHANCED_VISUALIZATIONS.md  LANGGRAPH_WORKFLOW.md  USAGE_GUIDE.md  architecture.md
backend/src/agent/: __init__.py  core.py  graph.py  model.py  nodes.py  prompts.py  tools.py
backend/src/api/: auth.py  models.py  server.py
backend/src/db/: database.py  postgres.py  supabase_client.py
backend/src/lg_workflow_agent/: chart_generator.py  graph.py  nodes.py  paper_formatter.py  prompts.py  state.py  sub_agents.py  tools.py
backend/src/lg_workflow_agent/helpers/: __init__.py  json_utils.py  persistence.py  references.py  sanitizer.py
backend/src/lg_workflow_agent/nodes/: __init__.py  _constants.py  aggregator.py  assign_workers.py  classifier.py  cleanup.py  paper_writer.py  report_finalizer.py  role_nodes.py  task_generator.py  validator.py  writer.py
backend/src/lg_workflow_agent/sources/: linkedin.py  podcast.py  rss.py
backend/src/pipeline/: __init__.py  orchestrator.py
backend/tests/: conftest.py  lg_workflow_agent_checks.ipynb  test_api.py  test_enhanced_visualizations.py  test_visualization_integration.py  verify_deployment.py
docs/: architecture.md
frontend/: vite.config.js
frontend/src/components/: Loader.jsx  ResearchResult.jsx  TopicInput.jsx
frontend/src/pages/: Home.jsx
tests/: component_checks.ipynb  conftest.py  smoke_test_api.py  streamlit_app.py  test_agent.py  test_db.py  test_pipeline.py  test_streaming.py  verify_database.py  workflow_ui.html
